tests/snapshots/text_display_snapshots__empty_lines.snap
---
source: tests/text_display_snapshots.rs
assertion_line: 237
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="400" height="200" viewBox="0 0 400 200">
  <rect width="400" height="200" fill="#ffffff"/>
  <defs>
    <clipPath id="clip-0-0-400-200">
      <rect x="0" y="0" width="400" height="200"/>
    </clipPath>
  </defs>
  <rect x="0" y="0" width="50" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="50" y="0" width="350" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <text x="0" y="17" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-400-200)">Line 1</text>
  <rect x="0" y="19" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="38" width="50" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="50" y="38" width="350" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <text x="0" y="55" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-400-200)">Line 3</text>
  <rect x="0" y="57" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="76" width="50" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="50" y="76" width="350" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <text x="0" y="93" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-400-200)">Line 5</text>
  <rect x="0" y="95" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="114" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="133" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="152" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <rect x="0" y="171" width="400" height="19" fill="#ffffff" clip-path="url(#clip-0-0-400-200)"/>
  <line x1="-2" y1="0" x2="2" y2="0" stroke="#000000" stroke-width="1"/>
  <line x1="0" y1="0" x2="0" y2="18" stroke="#000000" stroke-width="1"/>
  <line x1="-2" y1="18" x2="2" y2="18" stroke="#000000" stroke-width="1"/>
</svg>
