tests/snapshots/text_display_snapshots__markdown_emphasis.snap
---
source: tests/text_display_snapshots.rs
assertion_line: 160
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="500" height="150" viewBox="0 0 500 150">
  <rect width="500" height="150" fill="#ffffff"/>
  <defs>
    <clipPath id="clip-0-0-500-150">
      <rect x="0" y="0" width="500" height="150"/>
    </clipPath>
  </defs>
  <rect x="0" y="0" width="67" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="67" y="0" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="75" y="0" width="34" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="109" y="0" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="117" y="0" width="42" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="159" y="0" width="341" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <text x="0" y="17" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">This is </text>
  <text x="67" y="17" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">*</text>
  <text x="75" y="17" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">bold</text>
  <text x="109" y="17" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">*</text>
  <text x="117" y="17" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)"> text</text>
  <rect x="0" y="19" width="100" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="100" y="19" width="9" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="109" y="19" width="50" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="159" y="19" width="9" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="168" y="19" width="42" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="210" y="19" width="290" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <text x="0" y="36" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">And this is </text>
  <text x="100" y="36" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">_</text>
  <text x="109" y="36" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">italic</text>
  <text x="159" y="36" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)">_</text>
  <text x="168" y="36" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-150)"> text</text>
  <rect x="0" y="38" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="0" y="57" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="0" y="76" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="0" y="95" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <rect x="0" y="114" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-150)"/>
  <line x1="-2" y1="0" x2="2" y2="0" stroke="#000000" stroke-width="1"/>
  <line x1="0" y1="0" x2="0" y2="18" stroke="#000000" stroke-width="1"/>
  <line x1="-2" y1="18" x2="2" y2="18" stroke="#000000" stroke-width="1"/>
</svg>
