tests/snapshots/text_display_snapshots__markdown_header.snap
---
source: tests/text_display_snapshots.rs
assertion_line: 150
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="500" height="200" viewBox="0 0 500 200">
  <rect width="500" height="200" fill="#ffffff"/>
  <defs>
    <clipPath id="clip-0-0-500-200">
      <rect x="0" y="0" width="500" height="200"/>
    </clipPath>
  </defs>
  <rect x="0" y="0" width="201" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="201" y="0" width="299" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <text x="0" y="16" fill="#00aaaa" font-family="Courier, 'Courier New', monospace" font-size="16" font-weight="bold" font-style="normal" clip-path="url(#clip-0-0-500-200)"># Welcome to Markdown</text>
  <rect x="0" y="19" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="38" width="168" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="168" y="38" width="332" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <text x="0" y="55" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-500-200)">This is normal text.</text>
  <rect x="0" y="57" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="76" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="95" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="114" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="133" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="152" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <rect x="0" y="171" width="500" height="19" fill="#ffffff" clip-path="url(#clip-0-0-500-200)"/>
  <line x1="-2" y1="0" x2="2" y2="0" stroke="#000000" stroke-width="1"/>
  <line x1="0" y1="0" x2="0" y2="18" stroke="#000000" stroke-width="1"/>
  <line x1="-2" y1="18" x2="2" y2="18" stroke="#000000" stroke-width="1"/>
</svg>
