tests/snapshots/text_display_snapshots__markdown_mixed_styles.snap
---
source: tests/text_display_snapshots.rs
expression: svg
extension: svg
snapshot_kind: binary
---
