tests/snapshots/text_display_snapshots__simple_markdown_document.snap
---
source: tests/text_display_snapshots.rs
assertion_line: 278
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="600" height="400" viewBox="0 0 600 400">
  <rect width="600" height="400" fill="#ffffff"/>
  <defs>
    <clipPath id="clip-0-0-600-400">
      <rect x="0" y="0" width="600" height="400"/>
    </clipPath>
  </defs>
  <rect x="0" y="0" width="124" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="124" y="0" width="476" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="16" fill="#00aaaa" font-family="Courier, 'Courier New', monospace" font-size="16" font-weight="bold" font-style="normal" clip-path="url(#clip-0-0-600-400)"># My Document</text>
  <rect x="0" y="19" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="38" width="210" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="210" y="38" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="218" y="38" width="67" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="285" y="38" width="9" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="294" y="38" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="302" y="38" width="298" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="55" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">This is a paragraph with </text>
  <text x="210" y="55" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">*</text>
  <text x="218" y="55" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">emphasis</text>
  <text x="285" y="55" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">*</text>
  <text x="294" y="55" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">.</text>
  <rect x="0" y="57" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="76" width="144" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="144" y="76" width="456" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="92" fill="#00aaaa" font-family="Courier, 'Courier New', monospace" font-size="16" font-weight="bold" font-style="normal" clip-path="url(#clip-0-0-600-400)">## Code Example</text>
  <rect x="0" y="95" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="114" width="109" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="109" y="114" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="117" y="114" width="93" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="210" y="114" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="218" y="114" width="76" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="294" y="114" width="306" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="131" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">Here is some </text>
  <text x="109" y="131" fill="#ff00ff" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">`</text>
  <text x="117" y="131" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">inline code</text>
  <text x="210" y="131" fill="#ff00ff" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">`</text>
  <text x="218" y="131" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)"> in text.</text>
  <rect x="0" y="133" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="152" width="124" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="124" y="152" width="476" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="168" fill="#00aaaa" font-family="Courier, 'Courier New', monospace" font-size="16" font-weight="bold" font-style="normal" clip-path="url(#clip-0-0-600-400)">## Conclusion</text>
  <rect x="0" y="171" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="190" width="42" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="42" y="190" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="50" y="190" width="84" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="134" y="190" width="8" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="142" y="190" width="93" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="235" y="190" width="365" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <text x="0" y="207" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">More </text>
  <text x="42" y="207" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">_</text>
  <text x="50" y="207" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">emphasized</text>
  <text x="134" y="207" fill="#00aa00" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)">_</text>
  <text x="142" y="207" fill="#000000" font-family="Courier, 'Courier New', monospace" font-size="14" font-weight="normal" font-style="normal" clip-path="url(#clip-0-0-600-400)"> text here.</text>
  <rect x="0" y="209" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="228" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="247" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="266" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="285" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="304" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="323" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="342" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="361" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <rect x="0" y="380" width="600" height="19" fill="#ffffff" clip-path="url(#clip-0-0-600-400)"/>
  <line x1="-2" y1="0" x2="2" y2="0" stroke="#000000" stroke-width="1"/>
  <line x1="0" y1="0" x2="0" y2="18" stroke="#000000" stroke-width="1"/>
  <line x1="-2" y1="18" x2="2" y2="18" stroke="#000000" stroke-width="1"/>
</svg>
